fix overflow hidden panel shop

--- a/src/components/Body.module.scss
+++ b/src/components/Body.module.scss
@@ -8,7 +8,7 @@
     background: rgba(200, 204, 225,0.8);
     // background: rgba(255, 165, 21, 0.6);
     border-radius: 50px;
-    overflow: hidden;
+    // overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
